[package]
name = "sqlx-cursor-paginator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
sqlx-page = { git = "https://github.com/qwfy/sqlx-page.git", branch = "master" }
service-util = { git = "https://github.com/ukasyah-dev/service-util.git", branch = "main" }
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "cecda0531bf7d90800af66b186055932ee730526" }
chrono = "0.4.41"
base64 = "0.22.1"
log = "0.4.27"
serde_json = "1.0.140"
